change name to be published for now

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-	"name": "indexcoop-tokenlist",
+	"name": "@nsorcell/indexcoop-tokenlist",
+	"version": "0.1.0",
 	"main": "dist/index.cjs",
 	"module": "dist/index.js",
 	"typings": "dist/index.d.ts",
