--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,6 +16,8 @@ permissions:
 
 jobs:
   build:
+    env:
+       ALCHEMY_ID: ${{ secrets.ALCHEMY_ID }}
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
