remove nvmrc bunx instead of npx

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -56,4 +56,4 @@ jobs:
         env:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: npx semantic-release --branches main
+        run: bunx semantic-release --branches main
