--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,8 +17,10 @@ permissions:
 jobs:
   build:
     env:
-       ALCHEMY_ID: ${{ secrets.ALCHEMY_ID }}
+      ALCHEMY_ID: ${{ secrets.ALCHEMY_ID }}
     runs-on: ubuntu-latest
+    container:
+      image: node:alpine
     steps:
       - uses: actions/checkout@v4
         with:
@@ -37,6 +39,8 @@ jobs:
 
   publish:
     runs-on: ubuntu-latest
+    container:
+      image: node:alpine
     if: ${{ github.ref == 'refs/heads/main' }}
     needs: [build]
     permissions:
