--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,6 +48,8 @@ jobs:
         with:
           fetch-depth: 0
       - uses: actions/setup-node@v4
+        with:
+          node-version: ">=20.8.1"
       - uses: oven-sh/setup-bun@v2
         with:
           bun-version: latest
