--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,7 +49,7 @@ jobs:
           fetch-depth: 0
       - uses: actions/setup-node@v4
         with:
-          node-version: ">=20.8.1"
+          node-version-file: ".nvmrc"
       - uses: oven-sh/setup-bun@v2
         with:
           bun-version: latest
