--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nsorcell/indexcoop-tokenlist",
-  "version": "0.1.0",
+  "version": "0.0.1",
   "main": "dist/index.cjs",
   "module": "dist/index.js",
   "typings": "dist/index.d.ts",
@@ -12,10 +12,13 @@
     "list:build": "bun ./scripts/index.ts",
     "list:bundle": "rimraf ./dist && bun tsup && bun copy-tokenlist",
     "copy-tokenlist": "shx cp ./*.tokenlist.json ./dist",
-    "release": "bunx semantic-release branches --main"
+    "release": "bunx semantic-release"
   },
   "dependencies": {
     "@uniswap/token-lists": "^1.0.0-beta.34"
+  },
+  "release": {
+    "branches": ["main"]
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.2",
