feat(dstEth) - dstETH for base

--- a/package.json
+++ b/package.json
@@ -18,7 +18,24 @@
     "@uniswap/token-lists": "^1.0.0-beta.34"
   },
   "release": {
-    "branches": ["main"]
+    "branches": ["main"],
+    "plugins": [
+      [
+        "@semantic-release/commit-analyzer",
+        {
+          "preset": "angular",
+          "releaseRules": [
+            { "type": "remove", "release": "major" },
+            { "type": "feat", "release": "minor" },
+            { "type": "fix", "release": "patch" },
+            { "type": "chore", "release": "patch" },
+            { "type": "docs", "release": "patch" },
+            { "type": "refactor", "release": "patch" },
+            { "type": "build", "release": "patch" }
+          ]
+        }
+      ]
+    ]
   },
   "publishConfig": {
     "access": "public"
