feat(sr): add sr npm plugin

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "release": {
     "branches": ["main"],
     "plugins": [
+      "@semantic-release/npm",
       [
         "@semantic-release/commit-analyzer",
         {
