--- a/package.json
+++ b/package.json
@@ -22,6 +22,17 @@
     "plugins": [
       "@semantic-release/npm",
       [
+        "@semantic-release/github",
+        {
+          "assets": [
+            {
+              "path": "dist/**",
+              "label": "Release Files"
+            }
+          ]
+        }
+      ],
+      [
         "@semantic-release/commit-analyzer",
         {
           "preset": "angular",
