--- a/package.json
+++ b/package.json
@@ -26,8 +26,7 @@
         {
           "assets": [
             {
-              "path": "dist/**",
-              "label": "Release Files"
+              "path": "dist/**"
             }
           ]
         }
