--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@nsorcell/tokenlist",
+  "name": "@nsorcell/test-tokenlist",
   "version": "0.0.1",
   "main": "dist/index.cjs",
   "module": "dist/index.js",
