ignore(tweaks): some tweaks

--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
             { "type": "chore", "release": "patch" },
             { "type": "docs", "release": "patch" },
             { "type": "refactor", "release": "patch" },
-            { "type": "build", "release": "patch" }
+            { "type": "build", "release": "patch" },
+            { "type": "ignore", "release": false }
           ]
         }
       ]
