fix(wait b&p) wait for build and publish

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,6 +44,7 @@ jobs:
         run: npx semantic-release --branches main
   create_pr:
     runs-on: ubuntu-latest
+    needs: build_and_publish
     permissions:
       contents: write
       pull-requests: write
