chore(exports, docs): add jsdoc, update exports

--- a/package.json
+++ b/package.json
@@ -4,10 +4,7 @@
   "main": "dist/index.cjs",
   "module": "dist/index.js",
   "typings": "dist/index.d.ts",
-  "files": [
-    "dist",
-    "README.md"
-  ],
+  "files": ["dist", "README.md"],
   "type": "module",
   "scripts": {
     "lint": "bunx @biomejs/biome lint",
@@ -21,9 +18,7 @@
     "@uniswap/token-lists": "^1.0.0-beta.34"
   },
   "release": {
-    "branches": [
-      "main"
-    ],
+    "branches": ["main"],
     "plugins": [
       [
         "@semantic-release/commit-analyzer",
