--- a/biome.json
+++ b/biome.json
@@ -7,7 +7,7 @@
   },
   "files": {
     "ignoreUnknown": false,
-    "ignore": ["dist/**/*"]
+    "ignore": ["dist/**/*", "./indexcoop.tokenlist.json"]
   },
   "formatter": {
     "enabled": true,
