feat(tests): add test enviroment and tests

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,6 +32,8 @@ jobs:
           node-version-file: ".nvmrc"
       - name: Install Dependencies
         run: bun install --frozen-lockfile
+      - name: Test
+        run: bun test
       - name: Build
         run: bun run list:build
       - name: Bundle
