--- a/package.json
+++ b/package.json
@@ -4,10 +4,7 @@
   "main": "dist/index.cjs",
   "module": "dist/index.js",
   "typings": "dist/index.d.ts",
-  "files": [
-    "dist",
-    "README.md"
-  ],
+  "files": ["dist", "README.md"],
   "type": "module",
   "scripts": {
     "lint": "bunx @biomejs/biome lint",
@@ -15,15 +12,14 @@
     "list:build": "bun ./scripts/index.ts",
     "list:bundle": "rimraf ./dist && bun tsup && bun copy-tokenlist",
     "copy-tokenlist": "shx cp ./*.tokenlist.json ./dist",
-    "release": "bunx semantic-release"
+    "test": "jest",
+    "coverage": "jest --coverage --no-cache"
   },
   "dependencies": {
     "@uniswap/token-lists": "^1.0.0-beta.34"
   },
   "release": {
-    "branches": [
-      "main"
-    ],
+    "branches": ["main"],
     "plugins": [
       [
         "@semantic-release/commit-analyzer",
@@ -89,12 +85,17 @@
   "devDependencies": {
     "@biomejs/biome": "1.9.2",
     "@types/bun": "latest",
+    "@types/jest": "^29.5.13",
     "ajv": "^8.17.1",
     "ajv-formats": "^3.0.1",
+    "fast-check": "^3.22.0",
+    "jest": "^29.7.0",
     "lodash": "^4.17.21",
     "rimraf": "^6.0.1",
     "semantic-release": "^24.1.1",
     "shx": "^0.3.4",
+    "ts-jest": "^29.2.5",
+    "ts-node": "^10.9.2",
     "tsup": "^8.3.0",
     "viem": "^2.21.14"
   },
