--- a/package.json
+++ b/package.json
@@ -4,10 +4,7 @@
   "main": "dist/index.cjs",
   "module": "dist/index.js",
   "typings": "dist/index.d.ts",
-  "files": [
-    "dist",
-    "README.md"
-  ],
+  "files": ["dist", "README.md"],
   "type": "module",
   "scripts": {
     "lint": "bunx @biomejs/biome lint",
@@ -16,15 +13,13 @@
     "list:bundle": "rimraf ./dist && bun tsup && bun copy-tokenlist",
     "copy-tokenlist": "shx cp ./*.tokenlist.json ./dist",
     "test": "jest",
-    "coverage": "jest --coverage --no-cache"
+    "coverage": "jest --coverage"
   },
   "dependencies": {
     "@uniswap/token-lists": "^1.0.0-beta.34"
   },
   "release": {
-    "branches": [
-      "main"
-    ],
+    "branches": ["main"],
     "plugins": [
       [
         "@semantic-release/commit-analyzer",
@@ -95,6 +90,7 @@
     "ajv-formats": "^3.0.1",
     "fast-check": "^3.22.0",
     "jest": "^29.7.0",
+    "jest-junit": "^16.0.0",
     "lodash": "^4.17.21",
     "rimraf": "^6.0.1",
     "semantic-release": "^24.1.1",
