--- a/package.json
+++ b/package.json
@@ -88,8 +88,10 @@
     "@types/jest": "^29.5.13",
     "ajv": "^8.17.1",
     "ajv-formats": "^3.0.1",
+    "coverage-badge-creator": "^1.0.19",
     "fast-check": "^3.22.0",
     "jest": "^29.7.0",
+    "jest-junit": "^16.0.0",
     "lodash": "^4.17.21",
     "rimraf": "^6.0.1",
     "semantic-release": "^24.1.1",
