--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,3 +19,5 @@ jobs:
         run: bun install --frozen-lockfile
       - name: Test
         run: bun test
+      - name: Build
+        run: bun run list:build
