--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,6 +8,8 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
+    env:
+      ALCHEMY_ID: ${{ secrets.ALCHEMY_ID }}
     steps:
       - uses: actions/checkout@v4
         with:
